feat: add multiple oAuth configurations based on context and registrationKey.
refactoring: removed unused CAS, moved sso mapping to lightbend config, added explicit sso config per type and provider
feat: add PrimaryLogin type import to data-object.ts